css/styles.css
/* general css */

/* 
standard orange color - rgb(243, 195, 61) 

lightgray color - rgb(192, 191, 187)
*/

body {
  font-family: 'Quicksand', sans-serif;
}

html {
  position: relative;
  min-height: 100%;
}

body {
  margin-bottom: 60px;
}


/* bio page */


#about {
  margin: 0 5% 0 5%;
  padding: 0 10% 10% 10%;
}

.about-text {
  font-size: 2em;
  text-align: center;
}

div.container.bio {
  margin: 0 auto;
}

.bio {
  margin: 5% 10% 30% 10%;
  padding: 15px;
  font-size: 1.4em;
}

/* social media and links */

.btn-circle {
  border-radius: 50px;
  border-color: rgb(192, 191, 187);
}

.btn-circle:hover {
  background-color: white;
  color: rgb(243, 195, 61);
}

a:link, a {
  color: black;
}

a:hover {
  text-decoration: none;
  color: rgb(243, 195, 61);
}

.btn-social-icon {
  font-size: 40px;
  padding-bottom: 5%;
}

.highlight:hover, .btn-social-icon:hover {
  color: rgb(243, 195, 61);
  }

.gold {
  color: rgb(243, 195, 61);
}

/* images */

.dana-profile {
  width: 30%;
  height: 30%;
}


.vancouver {
  width: 50%;
  margin: auto;
  display: block;
}

/* jumbotron */

.jumbotron h1 {
  font-family: 'Crimson Text';
}

.plus {
  color: rgb(243, 195, 61);
}

/* navbar header */

.glyphicon-th-large, .navbar-brand {
  font-size: 30px;
  color: rgb(243, 195, 61);
}

.navbar-brand, .navbar-nav {
  margin-top: 10px;
}

.navbar-brand {
  font-family: 'Crimson Text';
}


/* footer */

.footer {
  position: fixed;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 100px;
  background-color: #f5f5f5;
}

/** works page **/

.flexbox-container {
  display: flex;
  flex-flow: row wrap;
  justify-content-content: space-between space-around;
  text-align: center;
  margin-bottom: 20%;
  margin-top: 5%;
}

.flex-child {
  width: 450px;
  height: 300px;
  margin: auto;
  padding: 15px;
  border: 1px solid lightgray;
  margin-bottom: 10px;
}

.flex-child p, .flex-child h4 {
  font-size: 1.4em;
}

.flex-child img {
  padding: 15px;
}

.flex-child a:link, .flex-child a {
  color: black;
}

.flex-child a:hover {
  text-decoration: none;
  color: black;
}
/** skills page **/


.page-title{
  text-align: center;
  margin-bottom: 30px;
  font-weight: bold;
  color:rgb(243, 195, 61);
  font-family: 'Crimson Text';
}

.page-title h3 {
  color: black;
  font-weight: bold;
}

#skills {
  border:1px solid lightgray;
}

.tech-list li {
  display: inline-flex;
  list-style: none;
  margin: 15px;
  padding: 15px;
  font-size: 1.2em;
}


/* media queries */

@media (max-width: 600px) {
  
  // .about-text {
  //   margin: 0 5% 0 5%;
  // }

  .dana-profile {
    width: 50%;
    height: 50%;
  }

  .vancouver {
    width: 100%;
  }

}

